frontend/test/should_fail/index_pattern_multiple_edge_missing2_where_index_expected.grg
#using "index_multiple_model.gm"

rule i(ref s:set<int>) {
	-e:E{multiple(Ei >= 0, Ei <= 1, s >= 42, s <= 44)}->;
	
	modify {
	}
}
